--- a/jupyter/test.ipynb
+++ b/jupyter/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -10,10 +10,13 @@
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "from newsapi import NewsApiClient\n",
     "load_dotenv()\n",
     "\n",
+    "\n",
     "news_keys = os.getenv('NEWS_KEY')\n",
-    "fred_keys = os.getenv('FRED_API_KEY')"
+    "fred_keys = os.getenv('FRED_API_KEY')\n",
+    "api = NewsApiClient(api_key=news_keys)\n"
    ]
   },
   {
@@ -50,9 +53,6 @@
     }
    ],
    "source": [
-    "from newsapi import NewsApiClient\n",
-    "\n",
-    "api = NewsApiClient(api_key=news_keys)\n",
     "api.get_everything(q='oil')\n"
    ],
    "metadata": {
@@ -208,6 +208,49 @@
    ],
    "source": [
     "fred.get_series_vintagedates('FYFSD', limit = 15)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'Game Verity: The Chosen menjadi salah satu game terbaik di minggu ketiga November. Varity The Chosen sendiri adalah rogue like ARPG. Di dalam game ARPG ini, Anda bisa mengontrol karakter anime yang c… [+2820 chars]'"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = api.get_top_headlines(country=\"id\")\n",
+    "url = data[\"articles\"][0][\"content\"]\n",
+    "url"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "halo\n"
+     ]
+    }
+   ],
+   "source": [
+    "tes = \"halo\"\n",
+    "query = None if tes == \"\" else tes\n",
+    "print(query)"
    ],
    "metadata": {
     "collapsed": false
